added product update and delete apis
