# src/routers/router.js
@@ -10,7 +10,13 @@ const getUser = require("../controllers/user/get");
 const Login = require("../controllers/user/login");
 const getUserOrders = require('../controllers/user/userOrder')
 
+//product controller
 const getProduct = require("../controllers/products/get");
+const productList = require('../controllers/products/productList');
+const updateProduct = require('../controllers/products/update');
+const deleteProduct = require('../controllers/products/delete');
+
+
 
 const createAddress = require("../controllers/address/create");
 const getAddress = require("../controllers/address/get");
@@ -29,6 +35,7 @@ const getTopping = require("../controllers/toppings/get");
 
 //user middleware
 const ExpandUsername = require("../middleware/ExpandUsername");
+const deleteItem = require("../controllers/products/delete");
 
 // user CRUD
 router.post("/user/login", Login);
@@ -42,6 +49,10 @@ router.get("/user/order/:id", getUserOrders);
 
 //product
 router.get("/products", getProduct);
+router.get('/products/:page/:pageSize',productList);
+router.put('/products/item/:id/:idOfItem',updateProduct);
+router.delete('/products/item/:id/:idOfItem',deleteProduct);
+
 
 // topping controller
 router.get("/toppings", getTopping);
